# rapidstore

./: .gitignore  .mcp.json  .pre-commit-config.yaml  2504.19874v1.md  AGENTS.md  BENCHMARKS.md  BENCHMARK_GUIDEBOOK.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  GEMINI.md  LICENSE  NOTES.md  PERF_PLAN.md  QA_REPORT.md  RAM_DIAGNOSTIC_AND_FIX_PLAN.md  RAM_PLAN.md  README.md  convert_pdf.py  pyproject.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark-artifacts.yml  ci.yml  deploy-pages.yml  release.yml
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat
benches/: score_kernel.rs
benchmarks/: BENCHMARK_REPORT.md  _bench_rotation_compare.py  _perf_history.html  _run_sequencer.sh  _sprint_compare.py  _sprint_perf_gate.py  _vector_store_compare.py  _verify_and_fill.py  advisor_sweep_bench.py  bench_core.py  bench_v3.py  build_advisor_data.py  compare_quantizers_fair.py  compare_quantizers_paper.py  dim_sweep_bench.py  full_comparison_bench.py  full_config_bench.py  full_metrics.py  isolated_harness.py  isolated_worker.py  large_scale_bench.py  paper_recall_bench.py  perf_baseline.json  perf_history.json  perf_tracker.py  plot_scale_results.py  precommit_perf_check.py  qjl_scale_bench.py  real_world_bench.py  real_world_bench_v2.py  real_world_rag_test.py  recall_bench.py  retrieval_eval.py  retrieval_eval_history.json  run_full_perf_matrix.py  run_recall_bench.py  run_store_compare.py  run_store_compare_1_10_20_50.py  sprint_smoke.py  store_comparison_bench.py  (+2 more)
dist_tmp/: turboquantdb-0.1.0-cp310-cp310-win_amd64.whl  turboquantdb-0.1.0-cp311-cp311-win_amd64.whl  turboquantdb-0.1.0-cp312-cp312-win_amd64.whl  turboquantdb-0.1.0-cp313-cp313-win_amd64.whl
docs/: BATCH_CRUD_AND_FILTERS.md  BENCHMARKS.md  COMPATIBILITY_MATRIX.md  CONFIGURATION.md  M5_API_SPEC.md  M5_MULTITENANT_SERVICE_DESIGN.md  MIGRATION.md  MULTI_VECTOR.md  PYTHON_API.md  PYTHON_MIGRATION.md  QUANTIZER_MODES.md  ROADMAP_BACKLOG.md  SERVER_API.md  SERVER_DESIGN.md  WHAT_S_NEW_0_8.md  sprint_process.md
docs/integrations/: README.md  langchain.md  llama_index.md
docs/research/: non-padding-srht.md  quantizer-default-recommendation.md  v0.9-quantizer-recommendation.md
examples/: migrate_from_chroma.py  quickstart.py  rag.py
python/tqdb/: __init__.py  __init__.pyi  _filter_translator.py  _server_launcher.py  aio.py  chroma_compat.py  lancedb_compat.py  llama_index.py  migrate.py  multivector.py  rag.py  tqdb.pyi  vectorstore.py
python/turboquantdb/: __init__.py  rag.py
scripts/: install_hooks.ps1  install_hooks.sh
scripts/ci/: ci_quality_gate.py  run_recall_bench.py
scripts/hooks/: pre-commit
server/: .gitignore  Cargo.toml  README.md
server/src/: main.rs
src/: lib.rs
src/linalg/: hadamard.rs  matmul.rs  mod.rs  rotation.rs
src/python/: mod.rs
src/quantizer/: codebook.rs  mod.rs  mse.rs  prod.rs  qjl.rs
src/storage/: backend.rs  bm25.rs  compaction.rs  engine.rs  graph.rs  id_pool.rs  ivf.rs  live_codes.rs  metadata.rs  mod.rs  rrf.rs  segment.rs  tokenizer.rs  wal.rs
src/storage/engine/: filter.rs  mod.rs  tests.rs
t/: .rustc_info.json  fastmode_bench.py  perf_fix_test.py  rerank_recall_check.py
t/debug/.fingerprint/approx-a798179a5b75a9ab/: lib-approx  lib-approx.json
t/debug/.fingerprint/autocfg-366f5d561938d235/: lib-autocfg  lib-autocfg.json
t/debug/.fingerprint/bincode-cf479437e1a4bcb1/: lib-bincode  lib-bincode.json
t/debug/.fingerprint/bytemuck-6cc085957e1d0e1f/: lib-bytemuck  lib-bytemuck.json
t/debug/.fingerprint/cfg-if-709781a0f9096a35/: lib-cfg_if  lib-cfg_if.json
t/debug/.fingerprint/crossbeam-deque-8c1383e1c4600c98/: lib-crossbeam_deque  lib-crossbeam_deque.json
t/debug/.fingerprint/crossbeam-epoch-05b3f58eb30d65eb/: lib-crossbeam_epoch  lib-crossbeam_epoch.json
t/debug/.fingerprint/crossbeam-utils-335d590ded7380a0/: build-script-build-script-build  build-script-build-script-build.json
t/debug/.fingerprint/crossbeam-utils-3bfa44903d5927af/: lib-crossbeam_utils  lib-crossbeam_utils.json
t/debug/.fingerprint/crossbeam-utils-ab46a5d48a4e13f5/: run-build-script-build-script-build  run-build-script-build-script-build.json
t/debug/.fingerprint/displaydoc-b2cc3c237ecfc859/: lib-displaydoc  lib-displaydoc.json
t/debug/.fingerprint/either-2a1105232a2d94ba/: lib-either  lib-either.json
t/debug/.fingerprint/fastrand-6e2d7e01cc16e436/: lib-fastrand  lib-fastrand.json
t/debug/.fingerprint/form_urlencoded-1a476c0d12befcaa/: lib-form_urlencoded  lib-form_urlencoded.json
t/debug/.fingerprint/getrandom-106ac132bf4366a8/: lib-getrandom  lib-getrandom.json
t/debug/.fingerprint/getrandom-a53185ec85173da3/: lib-getrandom  lib-getrandom.json
t/debug/.fingerprint/getrandom-b4bedf87196e6fc4/: build-script-build-script-build  build-script-build-script-build.json
t/debug/.fingerprint/getrandom-c6d820c12e9b5674/: build-script-build-script-build  build-script-build-script-build.json
t/debug/.fingerprint/getrandom-cde93b5c5d0ebe63/: run-build-script-build-script-build  (+1 more)
test_bench_tmp/test/: metadata.db
tests/: bench_batch_crud.rs  bench_search.rs  cloud_tests.rs  conftest.py  integration_tests.rs  regression_known_issues.rs  test_adversarial_qa.py  test_async_api.py  test_bm25.rs  test_brutal_compat.py  test_brutal_compat2.py  test_brutal_qa.py  test_brutal_qa2.py  test_brutal_qa_all.py  test_brutal_server.py  test_chroma_compat.py  test_chroma_compat_coverage.py  test_compat_adversarial.py  test_import_fallbacks.py  test_lancedb_compat.py  test_lancedb_compat_coverage.py  test_langchain_compat.py  test_llama_index.py  test_market_simulation.py  test_memory_leaks.py  test_migrate.py  test_multivector.py  test_persistence_regressions.py  test_python_api.py  test_python_hybrid.py  test_rag_coverage.py  test_server_blackbox_adversarial.py
website/: advisor.css  advisor.html  advisor.js  index.html  script.js  styles.css
website/data/: advisor_data.js  advisor_data.json
(+279 files in other folders)
