[package]
name = "turboquantdb"
version = "0.2.0"
edition = "2024"

[lib]
name = "turboquantdb"
crate-type = ["cdylib", "lib"]

[dependencies]
# --- Core math (unchanged) ---
nalgebra = { version = "0.32", features = ["serde-serialize"] }
ndarray = "0.15"
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
rand_distr = "0.4.3"

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"

# --- Storage Layer ---
# object_store is available as an optional feature for Phase 5 cloud support.
# For Phase 1-3, local filesystem storage is used via std::fs.
memmap2 = "0.9"
redb = "2.0"
ulid = { version = "1.1", features = ["serde"] }

# --- Python Bindings ---
pyo3 = { version = "0.21.0", features = ["extension-module"] }
numpy = "0.21.0"

# Cloud backend (optional, requires C toolchain for TLS)
[features]
cloud = ["object_store"]

[dependencies.object_store]
version = "0.9"
features = ["aws", "gcp", "azure"]
optional = true

[build-dependencies]
pyo3-build-config = "0.21.0"

[dev-dependencies]
tempfile = "3.27.0"
