[package]
name = "turboquantdb"
version = "0.1.0"
edition = "2024"

[lib]
name = "turboquantdb"
crate-type = ["cdylib", "lib"]

[dependencies]
# --- Core math (unchanged) ---
nalgebra = { version = "0.32", features = ["serde-serialize"] }
ndarray = "0.15"
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
rand_distr = "0.4.3"

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"

# --- Storage Layer ---
memmap2 = "0.9"
half = { version = "2", features = ["bytemuck"] }
redb = "2.0"
ulid = { version = "1.1", features = ["serde"] }
url = "2.5"
rayon = "1.10"
matrixmultiply = "0.3"
mimalloc = { version = "0.1", default-features = false }

# --- Python Bindings ---
pyo3 = { version = "0.21.0", features = ["extension-module"] }
numpy = "0.21.0"

[features]
cloud = []

[build-dependencies]
pyo3-build-config = "0.21.0"

[dev-dependencies]
tempfile = "3.27.0"





