[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "tqdb"
version = "0.1.0"
description = "Embedded vector database using the TurboQuant algorithm (arXiv:2504.19874) — zero training, 2-4 bit compression, fast inner-product search"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["vector-database", "vector-search", "quantization", "embeddings", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]

[project.urls]
Homepage = "https://github.com/jyunming/TurboQuantDB"
Repository = "https://github.com/jyunming/TurboQuantDB"
Issues = "https://github.com/jyunming/TurboQuantDB/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"

[tool.pytest.ini_options]
tmp_path_retention_policy = "failed"
# --basetemp is set only on Windows locally via conftest, not here, so CI
# (Linux) uses pytest's default temp dir and doesn't fail on missing tmp/.
addopts = []
