[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "tqdb"
version = "0.7.0"
description = "Embedded vector database using the TurboQuant algorithm (arXiv:2504.19874) — zero training, 2-4 bit compression, fast inner-product search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
]
license = { file = "LICENSE" }
authors = [{ name = "jyunming", email = "69726231+jyunming@users.noreply.github.com" }]
keywords = ["vector-database", "vector-search", "quantization", "embeddings", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]

[project.optional-dependencies]
# Source-library readers required by `python -m tqdb.migrate`.
migrate = ["chromadb>=0.5", "lancedb>=0.10"]
# Just the Chroma migrator (no LanceDB).
migrate-chroma = ["chromadb>=0.5"]
# Just the LanceDB migrator (no Chroma).
migrate-lancedb = ["lancedb>=0.10"]
# LangChain v2 ``TurboQuantVectorStore`` in `tqdb.vectorstore`.
langchain = ["langchain-core>=0.3"]
# LlamaIndex ``TurboQuantVectorStore`` in `tqdb.llama_index`.
llamaindex = ["llama-index-core>=0.10"]

[project.scripts]
tqdb-server = "tqdb._server_launcher:main"
tqdb-migrate = "tqdb.migrate:main"

[project.urls]
Homepage = "https://jyunming.github.io/TurboQuantDB"
Repository = "https://github.com/jyunming/TurboQuantDB"
Documentation = "https://jyunming.github.io/TurboQuantDB"
Issues = "https://github.com/jyunming/TurboQuantDB/issues"
Changelog = "https://github.com/jyunming/TurboQuantDB/releases"

[tool.maturin]
features = ["python", "pyo3/extension-module"]
python-source = "python"
include = ["python/tqdb/*.pyi", "python/tqdb/_bin/*"]

[tool.pytest.ini_options]
tmp_path_retention_policy = "failed"
# --basetemp is set only on Windows locally via conftest, not here, so CI
# (Linux) uses pytest's default temp dir and doesn't fail on missing tmp/.
addopts = []
asyncio_mode = "strict"
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
]
