[package]
name = "turboquantdb-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
turboquantdb = { path = ".." }
ndarray = "0.15"

[dev-dependencies]
tempfile = "3.27.0"



